--- a/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
+++ b/Launcher/Launcher.Module.Inspection/Launcher.Module.Inspection.csproj
@@ -37,6 +37,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Caliburn.Micro.2.0.1\lib\net45\Caliburn.Micro.Platform.dll</HintPath>
     </Reference>
+    <Reference Include="DevComponents.WPF.Controls">
+      <HintPath>..\Launcher.Core\Lib\DevComponents.WPF.Controls.dll</HintPath>
+    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
