--- a/Launcher/Launcher/packages.config
+++ b/Launcher/Launcher/packages.config
@@ -9,6 +9,9 @@
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="MahApps.Metro" version="0.14.0.0" targetFramework="net45" />
   <package id="MahApps.Metro.Resources" version="0.3.0.0" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.8" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net45" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net45" />
   <package id="System.Data.SQLite" version="1.0.94.1" targetFramework="net45" />
   <package id="System.Data.SQLite.Core" version="1.0.94.0" targetFramework="net45" />
