--- a/Launcher/Launcher.Module.Document/packages.config
+++ b/Launcher/Launcher.Module.Document/packages.config
@@ -3,6 +3,10 @@
 <packages>
   <package id="Caliburn.Micro" version="2.0.1" targetFramework="net45" />
   <package id="Caliburn.Micro.Core" version="2.0.1" targetFramework="net45" />
+  <package id="cef.redist.x64" version="3.2171.1979" targetFramework="net45" />
+  <package id="cef.redist.x86" version="3.2171.1979" targetFramework="net45" />
+  <package id="CefSharp.Common" version="39.0.0-pre03" targetFramework="net45" />
+  <package id="CefSharp.WinForms" version="39.0.0-pre03" targetFramework="net45" />
   <package id="Extended.Wpf.Toolkit" version="2.4" targetFramework="net45" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net45" />
 </packages>
